--- a/Domain 1/MusicStore1/11c-scripts.html
+++ b/Domain 1/MusicStore1/11c-scripts.html
@@ -1,7 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Script Support</title>       
+    <meta charset="utf-8" />
+    <meta name= "keywords" content="music, store, instruments" />
+    <meta name= "viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Google Translate" content="nottranslate" />
+
+    <title>Script Support</title> 
+
+    <link rel ="stylesheet" type="'type/css" href="test.css" /> 
+
 </head>
 <body>
     Script test
