--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>HTML & CSS IT Specialist Certification Exam</h1>
     
     <ul>
-      <li><a href= "#"> Domain 1</li></a>
+      <li><a href= "Domain 1/MusicStore1/index.html"> Domain 1</li></a>
       <li><a href= "#"> Domain 2</li></a>
       <li><a href= "#"> Domain 3</li></a>
       <li><a href= "#"> Domain 4</li></a>
