--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <ul>
       <li><a href= "Domain 1/MusicStore1/index.html"> Domain 1</li></a>
-      <li><a href= "#"> Domain 2</li></a>
+      <li><a href= "Domain 2/MusicStore2/22b3-books.html"> Domain 2</li></a>
       <li><a href= "#"> Domain 3</li></a>
       <li><a href= "#"> Domain 4</li></a>
       <li><a href= "#"> Domain 5</li></a>
