--- a/Domain 3/MusicStore3/31a-hours.html
+++ b/Domain 3/MusicStore3/31a-hours.html
@@ -6,6 +6,26 @@
 </head>
 <body>
     Hours of operation
-    
+    <table>
+        <tr>
+            <td></td>
+        </tr>
+
+         <tr>
+            <td></td>
+        </tr>
+
+         <tr>
+            <td></td>
+        </tr>
+
+         <tr>
+            <td></td>
+        </tr>
+
+         <tr>
+            <td></td>
+        </tr>
+    </table>
 </body>
 </html>
