--- a/Domain 3/MusicStore3/34j-contactus.html
+++ b/Domain 3/MusicStore3/34j-contactus.html
@@ -13,7 +13,9 @@
 
     <!-- insert form here-->
     <form action="thankyou.html" method="post" oninput="fn.value = firstname.value + ' ' + lastname.value">
-        <label for="firstname">First Name</label>
+        <fieldset>
+            <legend>Personal</legend>
+            <label for="firstname">First Name</label>
         <input type="text" name="firstname" id="firstname" />
         <br />
         <label for="lastname">Last Name</label>
@@ -21,6 +23,9 @@
         <br />
         <label for="email">Email Address</label>
         <input type="email" name="email" id="email" />
+        </fieldset>
+        <fieldset>
+            <legend>Questions</legend>
         <p>How did you hear about us?</p>
         <select name="found" id="found">
             <option value="TV">TV</option>
@@ -41,6 +46,7 @@
             <option value="bass">
             </option>
         </datalist>
+        </fieldset>
         <p>Add comments below</p>
         <textarea name="comments" rows="6" cols="50" maxlength="255"></textarea>
         <button name="showimage" onclick="">Show image</button>
