--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href= "Domain 1/MusicStore1/index.html"> Domain 1</li></a>
       <li><a href= "Domain 2/MusicStore2/22b3-books.html"> Domain 2</li></a>
       <li><a href= "Domain 3/MusicStore3/34j-contactus.html"> Domain 3</li></a>
-      <li><a href= "#"> Domain 4</li></a>
+      <li><a href= "Domain 4/Student/MusicStore4/43e-media.html"> Domain 4</li></a>
       <li><a href= "#"> Domain 5</li></a>
       <li><a href= "#"> Domain 6</li></a>
     </ul>
